# hermes-kakao-talkchannel-plugin

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
docs/: 00-hermes-plugin-sdk.md  01-architecture.md  02-openclaw-port-map.md  03-implementation-plan.md  PAIRING_OPERATIONS.md  README.md  known-relay-defects.md  relay-trust-boundary.md  relay-wire-protocol.md
hermes_kakao_talkchannel/: __init__.py  adapter.py  config.py  hermes_compat.py  registration.py
hermes_kakao_talkchannel/kakao/: __init__.py  callback.py  chunking.py  limits.py  markdown.py  payload.py  response.py
hermes_kakao_talkchannel/pairing/: __init__.py  cli.py  publisher.py  registry.py  state_file.py
hermes_kakao_talkchannel/transport/: __init__.py  client.py  models.py  relay.py  session.py  session_store.py  sse.py
tests/: conftest.py  test_adapter.py  test_config.py  test_inbound_replay.py  test_invariants.py  test_registration.py
tests/fixtures/: payloads.py
tests/kakao/: test_chunking.py  test_limits.py  test_markdown.py  test_payload.py  test_response.py
tests/pairing/: test_cli.py  test_publisher.py  test_registry.py  test_state_file.py
tests/transport/: test_client.py  test_relay.py  test_session_store.py  test_sse.py
