[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-kakao-talkchannel"
version = "0.1.0"
description = "KakaoTalk Channel platform adapter for Hermes Agent"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Seung-Bum Lee" }]
keywords = ["hermes", "hermes-agent", "kakaotalk", "kakao", "chatbot", "plugin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "aiohttp>=3.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "aioresponses>=0.7.6",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/blcktgr73/hermes-kakao-talkchannel-plugin"
Issues = "https://github.com/blcktgr73/hermes-kakao-talkchannel-plugin/issues"

# Hermes discovers plugins through this entry point group.
# See docs/00-hermes-plugin-sdk.md §7 (ENTRY_POINTS_GROUP = "hermes_agent.plugins").
[project.entry-points."hermes_agent.plugins"]
kakao-talkchannel = "hermes_kakao_talkchannel"

[tool.hatch.build.targets.wheel]
packages = ["hermes_kakao_talkchannel"]

[tool.hatch.build.targets.wheel.force-include]
"plugin.yaml" = "hermes_kakao_talkchannel/plugin.yaml"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
# Hermes itself is not a declared dependency: the host injects it at runtime.
ignore_missing_imports = true
files = ["hermes_kakao_talkchannel", "tests"]
